Fix formatting and typos